styles/style.css
body{
    margin-top: 15%;
}

.row{
    display: flex;
    justify-content: center;
    align-items: center;
}

.white-square{
    background-color: #E9EDCC;
    width: 90px;
    height: 90px;
}

.black-square{
    background-color: #779954;
    width: 90px;
    height: 90px;
}

.piece{
    background-size: 100%;
    cursor: pointer;
}

/* chess pieces */

/* black pieces */
.piece.black-rook{
    background-image: url("/images/pieces/black-rook.png");
} 

.piece.black-knight{
    background-image: url("/images/pieces/black-knight.png");
}

.piece.black-bishop{
    background-image: url("/images/pieces/black-bishop.png");
}

.piece.black-queen{
    background-image: url("/images/pieces/black-queen.png");
}

.piece.black-king{
    background-image: url("/images/pieces/black-king.png");
}

.piece.black-pawn{
    background-image: url("/images/pieces/black-pawn.png");
}


/* white pieces */
.piece.white-rook{
    background-image: url("/images/pieces/white-rook.png");
}

.piece.white-knight{
    background-image: url("/images/pieces/white-knight.png");
}

.piece.white-bishop{
    background-image: url("/images/pieces/white-bishop.png");
}

.piece.white-queen{
    background-image: url("/images/pieces/white-queen.png");
}

.piece.white-king{
    background-image: url("/images/pieces/white-king.png");
}

.piece.white-pawn{
    background-image: url("/images/pieces/white-pawn.png");
}

/* chess pieces */

